<resources>
    <string name="app_name">givit-android</string>
    <!--login fragment-->
    <string name="default_email_hint">Email</string>
    <string name="default_password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="continue_without_joining">or Continue with</string>
    <string name="agree_to_terms">By Continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="copy_right">2016 Givit,inc v5.6.8</string>

    <!--reset password fragment-->
    <string name="reset_password_title">Reset password</string>
    <string name="reset_password_description">Please enter the email you used to \nlog in to Givit and we will send you \nan email to reset your password.</string>
    <string name="send">Send</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
