<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_block"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="app.com.example.android.givit_android.fragments.LoginFragment">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/logo_image_width"
        android:layout_height="@dimen/logo_image_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_margin"
        android:src="@drawable/app_logo" />

    <EditText
        style="@style/longRectangle"
        android:hint="@string/default_email_hint"
        android:paddingLeft="@dimen/login_text_padding" />

    <EditText
        android:id="@+id/editText"
        style="@style/longRectangle"
        android:hint="@string/default_password_hint"
        android:paddingLeft="@dimen/login_text_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_margin"
        android:background="@color/colorWhite"
        android:text="@string/forgot_password"
        android:textColor="@color/colorMainRedOpct95"
        android:textSize="@dimen/text_size" />

    <Button
        style="@style/longRectangle"
        android:backgroundTint="@color/colorLoginBlue"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/button"
        style="@style/longRectangle"
        android:backgroundTint="@color/colorSignupRed"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="@dimen/login_margin_small"
        android:layout_marginTop="@dimen/login_margin_small"
        android:background="@color/colorWhite"
        android:text="@string/continue_without_joining"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_margin_small"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/copyright_image_size"
            android:layout_height="@dimen/copyright_image_size"
            android:src="@drawable/ic_copyright_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_very_small"
            android:text="@string/copy_right" />
    </LinearLayout>
</LinearLayout>

