<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainRed"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="app.com.example.android.givit_android.LoginActivity">

    <FrameLayout
        android:id="@+id/loginBlock"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/app_logo" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:paddingLeft="5dp"
                android:text="@string/default_email_hint" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:paddingLeft="5dp"
                android:text="@string/default_password_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/normal_dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorWhite"
                android:text="@string/forgot_password"
                android:textColor="@color/colorMainRed"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/colorLoginBlue"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/colorSignupRed"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:text="@string/continue_without_joining"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_to_terms"
                android:textAlignment="center"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_copyright_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/copy_right" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
